# Bench_Grid_HiRep

./: .gitignore  BenchGridHiRep_DB.sqlite  Bench_Grid_HiRep.py  CMakeLists.txt  Makefile  Makefile_macros  README.md  alternative_connect_leonardo.sh  build_Grid-DWF-Telos.sh  build_Grid.sh  build_HiRep-LLR_HMC-master.sh  build_Hirep_LLR-SP_HB.sh  build_Hirep_LLR_HB.sh  build_Hirep_LLR_SP.sh  build_SombreroBKeeper.sh  build_WarpX_leonardo.sh  build_dependencies.sh  clean_all_builds.sh  common_main.sh  config_Run_Batchs.sh  config_batch_action.sh  config_system.sh  connect_leonardo.sh  creator_batch.sh  creator_bench_LLR_DataStructure.sh  creator_bench_all_batchs.sh  creator_bench_case_batch.sh  creator_bench_controller_batch.sh  creator_phys_controller_batch.sh  creator_tarball_HiRep-LLR-HB_Runs.sh  creator_tarball_HiRep-LLR-SP_Runs.sh  deflator_tarball_HiRep-LLR-HB_Runs.sh  deflator_tarball_HiRep-LLR-SP_Runs.sh  deploy_to_clusters.sh  deploy_withXTerm_to_clusters.sh  dispatcher_Grid_HiRep.sh  dispatcher_Grid_hiRep.sh  download_leonardo.sh  getConfigure-BKeeper.sh  getConfigure-Grid-Telos.sh  (+20 more)
CMakes/: CMakeLists_WSL.txt  CMakeLists_visual_studio-Windows-Cuda-12.6.txt  CMakeLists_visual_studio-Windows-Default.txt  CMakeLists_visual_studio-Windows.txt
Grid_HiRep_Benchmarker/: Grid_HiRep_Benchmarker.cpp  Makefile.am  Makefile.in  README.md  configure  configure.ac  launch_MobiusSp2f_DWF_bench.sh
Grid_HiRep_Benchmarker/include/: Bencher_Grid.hpp  Exception_app.hpp  cmd_Line.hpp  common_Helpr_cpu.hpp  common_main_app.hpp  get_deviceQuery_gpu.hpp  get_systemQuery_cpu.hpp  global_app.hpp  testing_unitTest.hpp  timing_app.hpp  typedef_MobiusSp2f_Grid.hpp
Grid_HiRep_Benchmarker/src/: Bencher_Grid.cpp  common_Helpr_cpu.cpp  global_app.cpp
Grid_HiRep_Benchmarker/test_codes/cpu/: junk.cmake  junk.cpp
Grid_HiRep_Benchmarker/test_codes/gpu/: testing_unitTest.cpp
Grid_HiRep_Benchmarker/utils/: cmd_Line.cpp  get_systemQuery_cpu.cpp  timing_app.cpp
Scripts/: testing_Grid_spectrum.sh
Scripts/Batch_Scripts/: Batch_body_methods.sh  Batch_header_methods.sh  Batch_util_methods.sh  Compile_BKeeper.sh  Compile_Grid_Telos.sh  Compile_Grid_Telos_MareNostrum.sh  Compile_Grid_Telos_leonardo.sh  HiRep_HMC.sh  HiRep_HMC_RDMA.sh  Run_BKeeper.sh  Run_BKeeper_compile.sh  Run_BKeeper_run_cpu.sh  Run_BKeeper_run_gpu.sh  Run_HiRep-LLR-master-cpu.sh  Run_Sombrero_Weak.sh  Run_Sombrero_strong.sh  Run_Sombrero_weak.sh  Sombrero_Strong.sh  Sombrero_Weak.sh
Scripts/Batch_Scripts/LeonardoInstallerWarpX/: install_gpu_dependencies.sh
Scripts/Databases/Bench/: BenchGridHiRep_DB.sql
Scripts/MachinesSpecifics/Vega/: mod_ld_BldGmpMfr_CfgGrid.sh  mod_ld_CfgBKeeper.sh  mod_ld_CfgGrid.sh
Scripts/MonitoringTools/: incrementalspeed.py
Scripts/Templates/: Run_Sombrero_Strong.sh
app_makers/HiRep-LLR-master/: MkFlags
app_makers/Hirep_LLR_SP/: MkFlags
app_makers/Sombrero/: MkFlags
backup/01Nov24/: build_SombreroBKeeper.sh  build_dependencies.sh  common_main.sh
backup/16Dec24/: creator_bench_controller_batch.sh
backup/31Oct24/original/: dependencies_Grid.sh  deployer_Grid_hiRep.sh
benchmarks/BKeeper/: input_BKeeper_mi300.xml
benchmarks/HiRep-LLR-master/: input_file
benchmarks/Sombrero/: MkFlags
doc/: Batch_architecture.drawio  LLR.ipynb
doc/BKeeper/: example_Lumi_gpu_script.sh  gpu-mpi-wrapper-new-Leonardo.sh  gpu-mpi-wrapper-new-MareNostrum-5.sh  gpu-mpi-wrapper-new-Mi210.sh  gpu-mpi-wrapper-new-Mi300.sh  gpu-mpi-wrapper-new-Vega.sh  gpu-mpi-wrapper-new.sh  job_BKeeper-Leonardo.sh  job_BKeeper-Lumi.sh  job_BKeeper-Sunbird.sh  job_BKeeper-Tursa.sh  job_BKeeper-Vega.sh  job_BKeeper.sh  working_n1_g1_mpi-1111_job_BKeeper-Leonardo.sh  working_n1_g2_mpi-1112_job_BKeeper-Leonardo.sh  working_n1_g2_mpi-1112_job_BKeeper-Lumi.sh  working_n1_g4_mpi-2222_job_BKeeper-Leonardo.sh
doc/BKeeper/Original/: gpu-mpi-wrapper-new-Lumi.sh  job_BKeeper-Lumi.sh  job_BKeeper.sh
doc/BKeeper/log/: TEST-JOB.9245221.out  TEST-JOB.9327636.out
doc/DomainWallFermions/: submit_tursaR1.sh
doc/HiRep-LLR-SP/: LLR-Plan-prog.md  programFlow-HiRep-LLR-SP.drawio
include/: common.cuh  insert_include_files_here.hpp  resmap_Sizes.cuh  testing_unitTest.cuh
src/: Makefile_globVar  Makefile_target  junk_Makefile_target
src/PythonCodes/: DataManage_common.py  DataManage_header.py  junk.python
src/PythonCodes/Jupyter-NoteBooks/Bench_Grid_HiRep_Notebook/: simple.ipynb  testing_local_PkgLoad.ipynb
src/PythonCodes/Jupyter-NoteBooks/LLR-Bench_Grid_HiRep_Notebooks/: Notebook_Bench_Grid_HiRep.ipynb  Tesxting_RandomMatrix.ipynb  junk.jupiterNotebook.ipynb  junk.python  junk.python.py  simple.ipynb  testing_local_PkgLoad.ipynb
src/PythonCodes/data/Run_BKeeper_run_gpu_lat24.24.24.32_nodes002_mpi04-01-02-02_small/: Run_BKeeper_run_gpu_lat24.24.24.32_nodes002_mpi04-01-02-02_small.sh
src/PythonCodes/utils/: BatchOutTransformer.py  Bencher.py  Bots_Selenium.py  Command_line.py  JSonCreator.py  JSonLauncher.py  LatticeModel_Analyser.py  MZmineModel_Analyser.py  MgfTransformer.py  RDKit_MS_Gen_tree.py  SystemCheck.py  messageHandler.py  progressBar.py
src/TemplaetClassCodes/: Bencher_Grid.cpp  Bencher_Grid.hpp
test_codes/: Makefile_target
test_codes/cpu/: Makefile_target  create_batch_main.sh  junk.cmake  junk.cu  junk.cuh  junk.make  samplefile.sh  testing_ArrayCase.sh  testing_ArrayFill_FromFile.sh  testing_ArraySwapping.sh  testing_MPI-nNodes-Combinatorics.sh  testing_SubDir_In_Dir.sh  testing_SubDir_data_dir.sh  testing_array.sh  testing_getscriptname.sh  testing_hostname.sh  testing_mpiDecomposition.sh  testing_nameMPIDistribution.sh  testing_permutation.sh  testing_sftp-ssh_fileAccess.py  testing_ssh_allremote.sh  testing_ssh_sunbird_ml.sh  testing_ssh_tursa_ml.sh  testing_ssh_vega_ml.sh  testing_timestamp.sh  testing_write_batch_slurm.sh
test_codes/gpu/cuda/: Makefile_target  gccg++_local.csh  gccg++_local_Grid.csh  gccg++_local_Grid.sh  gccg++_local_OpenCV.csh  gccg++_local_OpenGL.csh  junk.csh  testing_Grid.cpp  testing_Grid.cu  testing_Grid.cuh  testing_unitTest.cu
utils/: Makefile_target  junk_Makefile_target
(+116 files in other folders)
