ACLOCAL_AMFLAGS = -I .buildutils/m4

bin_PROGRAMS = Grid_HiRep_Benchmarker
Grid_HiRep_Benchmarker_SOURCES = Grid_HiRep_Benchmarker.cpp          \
                                 utils/cmd_Line.cpp                  \
                                 src/global_app.cpp                  \
                                 src/common_Helpr_cpu.cpp            \
                                 utils/get_systemQuery_cpu.cpp       \
                                 test_codes/gpu/testing_unitTest.cpp \
                                 src/Bencher_Grid.cpp

